--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -4,7 +4,7 @@ build:
 accounts:
   message: "Welcome"
   contactDetails:
-    name: "Travis - Prod - Loans"
+    name: "Travis Mend - Prod - Loans"
     email: "travis@eazybank.com"
   onCallSupport:
     +49 15210529204
